@@ -1,1 +1,2 @@
- * Dark Themes (WARNING: You must reselect your theme if upgrading from an old installation)
+ * Dark Themes (WARNING: You must reselect your theme if upgrading from an old installation) #532 #714
+ * Fix binary deduplication #715
