@@ -1,5 +1,6 @@
 KeePassDX(2.9.14)
- * Dark Themes (WARNING: You must reselect your theme if upgrading from an old installation)
+ * Dark Themes (WARNING: You must reselect your theme if upgrading from an old installation) #532 #714
+ * Fix binary deduplication #715
 
 KeePassDX(2.9.13)
  * Binary image viewer #473 #749
